tests/rosetta/out/Rust/call-a-function-11.error
rustc: exit status 1
error: expected identifier, found `:`
 --> /tmp/call-a-function-11.rs:8:19
  |
8 |     fn zeroptr(ref: &mut Vec<i32>) -> () {
  |                   ^ expected identifier

error: expected expression, found keyword `ref`
 --> /tmp/call-a-function-11.rs:9:9
  |
9 |         ref[0] = 0;
  |         ^^^ expected expression

error: expected pattern, found `=`
  --> /tmp/call-a-function-11.rs:16:21
   |
16 |         let mut box = vec![i];
   |                     ^
   |
note: `box` is a reserved keyword
  --> /tmp/call-a-function-11.rs:16:17
   |
16 |         let mut box = vec![i];
   |                 ^^^
help: escape `box` to use it as an identifier
   |
16 |         let mut r#box = vec![i];
   |                 ++

error: expected expression, found `)`
  --> /tmp/call-a-function-11.rs:17:25
   |
17 |         zeroptr(&mut box);
   |                         ^ expected expression

error: `box_syntax` has been removed
  --> /tmp/call-a-function-11.rs:18:13
   |
18 |         i = box[0];
   |             ^^^^^^
   |
help: use `Box::new()` instead
   |
18 -         i = box[0];
18 +         i = Box::new([0]);
   |

warning: value assigned to `x` is never read
 --> /tmp/call-a-function-11.rs:4:17
  |
4 |         let mut x = ival;
  |                 ^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` on by default

error: aborting due to 5 previous errors; 1 warning emitted

