tests/rosetta/out/Rust/call-a-function-11.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn zeroval(ival: i32) -> i32 {
        let mut x = ival;
        x = 0;
        return x;
    }
    fn zeroptr(ref: &mut Vec<i32>) -> () {
        ref[0] = 0;
    }
    fn main() -> () {
        let mut i = 1;
        println!("{}", vec![format!("{}", format!("{}{}", "initial: ", i.to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        let tmp = zeroval(i);
        println!("{}", vec![format!("{}", format!("{}{}", "zeroval: ", i.to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        let mut box = vec![i];
        zeroptr(&mut box);
        i = box[0];
        println!("{}", vec![format!("{}", format!("{}{}", "zeroptr: ", i.to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        println!("pointer: 0");
    }
    main();
}
